--- a/client/simple_user/index.html
+++ b/client/simple_user/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Welcome to the best Automotive e-Shop</h1>
         <nav>
-            <a href="products.html">Products</a>
+            <!-- <a href="products.html">Products</a> -->
             <a href="about.html">About Us</a>
             <a href="profile.html" id="profileLink" style="display: none;">Profile</a>
             <!-- <a href="index.html" id="logoutLink" style="display: none;">Logout</a> -->
@@ -26,7 +26,7 @@
                 <input type="email" id="loginEmail" required>
                 <label for="loginPassword">Password:</label>
                 <input type="password" id="loginPassword" required>
-                <button type="submit"><a href="products.html">Login</a></button>
+                <button type="submit">Login</button>
             </form>
         </section>
 
