--- a/client/simple_user/index.html
+++ b/client/simple_user/index.html
@@ -26,7 +26,7 @@
                 <input type="email" id="loginEmail" required>
                 <label for="loginPassword">Password:</label>
                 <input type="password" id="loginPassword" required>
-                <button type="submit"><a href="products.html">Login</a></button>
+                <button type="submit"><a href="profile.html">Login</a></button>
             </form>
         </section>
 
